--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,7 +13,8 @@ dependencies = [
     "python-dotenv (>=1.1.0,<2.0.0)",
     "openai (>=1.76.0,<2.0.0)",
     "devtools (>=0.12.2,<0.13.0)",
-    "googlesearch-python (>=1.3.0,<2.0.0)"
+    "googlesearch-python (>=1.3.0,<2.0.0)",
+    "pandas (>=2.2.3,<3.0.0)"
 ]
 
 [build-system]
